# python-storage

./: .gitignore  Justfile  README.md  db.sqlite  dev.ipynb  main.py  queue.sqlite  requirements.txt
dev/: kv-rest.ipynb  q-http.ipynb
fs-tools/: README.md  pyproject.toml
fs-tools/src/fs/: __init__.py  __init__.pyi  compression.py  io.py  moving.py  parallel.py  paths.py  reading.py  tar.py
kv/kv-api/: README.md  pyproject.toml
kv/kv-api/src/kv/api/: __init__.pyi  conn_strings.py  errors.py  impl.py  kv.py
kv/kv-api/src/kv/api/extensions/: __init__.pyi  append.py  locate.py
kv/kv-azure-blob/: README.md  dev.ipynb  pyproject.toml
kv/kv-azure-blob/src/kv/azure/blob/: __init__.py  __init__.pyi  blob.py  container.py  util.py
kv/kv-fs/: README.md  demo.ipynb  pyproject.toml
kv/kv-fs/src/kv/fs/: __init__.py  __init__.pyi  api.py
kv/kv-fs/src/kv/fs/append/: __init__.py  append.py  ndjson.py
kv/kv-rest/: Justfile  README.md  dev.ipynb  pyproject.toml
kv/kv-rest/kv-rest-client/: README.md  package.json  tsconfig.json
kv/kv-rest/kv-rest-client/src/: models.ts  schemas.ts  services.ts
kv/kv-rest/kv-rest-client/src/core/: OpenAPI.ts
kv/kv-rest/src/kv/rest/: __init__.py  __init__.pyi  api.py  cli.py  client.py  clientgen_cli.py  server.py
kv/kv-sql/: Justfile  README.md  pyproject.toml
kv/kv-sql/src/kv/sql/: api.py
kv/kv-sql/src/kv_sql/: __init__.py  api.py
kv/kv-sqlite-sync/: README.md  demo.ipynb  pyproject.toml
kv/kv-sqlite-sync/src/kv/sqlite/: __init__.pyi  api.py  queries.py
queue/queue-api/: README.md  pyproject.toml
queue/queue-api/src/q/api/: __init__.py  __init__.pyi  append.py  errors.py  queue.py  read.py  write.py
queue/queue-api/src/q/api/impl/: __init__.py  empty.py  simple.py
queue/queue-api/src/q/api/ops/: __init__.pyi  append_bounding.py  bounding.py  interleaving.py  merging.py  splitting.py  teeing.py
queue/queue-http/: Justfile  README.md  pyproject.toml
queue/queue-http/src/q/http/: __init__.py
queue/queue-http/src/q/http/client/: __init__.pyi  queue.py  read.py  request.py  util.py  write.py
queue/queue-http/src/q/http/server/: __init__.pyi  queue.py  read.py  util.py  write.py
queue/queue-kv/: README.md  demo.ipynb  pyproject.toml
queue/queue-kv/src/q/kv/: __init__.py  __init__.pyi  api.py  append.py
sqltypes/: README.md  pyproject.toml
sqltypes/src/sqltypes/: __init__.py  __init__.pyi  literal.py  meta.py  pydantic.py  string.py
test/: queue.sqlite
