[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-tools"
version = "0.1.16"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Simple, exception-free filesystem tools"
dependencies = [
  "haskellian", "typing-extensions"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/marciclabas/python-storage.git"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]