[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-fs"
version = "0.1.17"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "Key-Value DB API on the filesystem"
dependencies = [
  "kv-api", "haskellian", "lazy-loader", "fs-tools", "typing-extensions"
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/marciclabas/python-storage"
home = "https://github.com/marciclabas/python-storage/tree/main/kv/kv-fs"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]