[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-sql"
version = "0.1.2"
authors = [
  {name="Marcel Claramunt", email="marcel@moveread.com"}
]
description = "KV implementation over SQL Alchemy"
dependencies = [
  
]
requires-python = ">=3.10"
readme = {file="README.md", content-type="text/markdown"}

[project.urls]
repo = "https://github.com/moveread/REPO.git"

# [project.optional-dependencies]
# test = [
#   "pytest < 5.0.0",
#   "pytest-cov[all]"
# ]